# OsnovyDjango

./: .env  .env.example  .gitignore  README.md  app.py  catalog.html  category.html  commands.py  contacts.html  index.html  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
catalog/: admin.py  models.py  urls.py  views.py
catalog/fixtures/: category_data.json  product_data.json
catalog/management/commands/: load_catalog_data.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html
templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
templates/catalog/: contacts.html  home.html  product_detail.html
templates/includes/: footer.html  header.html
